--- a/Home.html
+++ b/Home.html
@@ -9,12 +9,13 @@
 <body>
     <header>
         <h1>Crop Marketplace</h1>
+        <br>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Products</a></li>
-                <li><a href="#">About Us</a></li>
                 <li><a href="#">Contact</a></li>
+                <li><a href="#">About Us</a></li>
             </ul>
         </nav>
     </header>
@@ -60,8 +61,8 @@
         </form>
     </section>
 
+    <h2>Featured Products</h2>
     <section class="products">
-        <h2>Featured Products</h2>
         <div class="product-grid">
             <div class="product-item">
                 <img src="https://via.placeholder.com/150" alt="Wheat">
@@ -81,47 +82,111 @@
                 <p>$15 per bag</p>
                 <button>Add to Cart</button>
             </div>
+            <div class="product-item">
+                <img src="https://via.placeholder.com/150" alt="Pulse">
+                <h3>Pulse</h3>
+                <p>$30 per bag</p>
+                <button>Add to Cart</button>
+            </div>
+            <div class="product-item">
+                <img src="https://via.placeholder.com/150" alt="Sugarcane">
+                <h3>Sugarcane</h3>
+                <p>$75 per bag</p>
+                <button>Add to Cart</button>
+            </div>
+            <div class="product-item">
+                <img src="https://via.placeholder.com/150" alt="Musturd">
+                <h3>Musturd</h3>
+                <p>$50 per bag</p>
+                <button>Add to Cart</button>
+            </div>
+            <div class="product-item">
+                <img src="https://via.placeholder.com/150" alt="Cabbage">
+                <h3>Cabbage</h3>
+                <p>$40 per bag</p>
+                <button>Add to Cart</button>
+            </div>
+            <div class="product-item">
+                <img src="https://via.placeholder.com/150" alt="Tomato">
+                <h3>Tomato</h3>
+                <p>$110 per bag</p>
+                <button>Add to Cart</button>
+            </div>
+            <div class="product-item">
+                <img src="https://via.placeholder.com/150" alt="Potato">
+                <h3>Potato</h3>
+                <p>$30 per bag</p>
+                <button>Add to Cart</button>
+            </div>
         </div>
     </section>
-
-    <footer>
+    <div id="foot">
         <p>&copy; 2024 Crop Marketplace. All rights reserved.</p>
         <ul>
             <li><a href="#">Privacy Policy</a></li>
             <li><a href="#">Terms of Service</a></li>
         </ul>
+    </div>
+    <footer>
+        <button id="chatbot">Chat me<!--img src="https://www.bing.com/images/search?view=detailV2&ccid=2uUBwCMF&id=7B2179354288A4A1E35E4616BFEB4D107D1F4750&thid=OIP.2uUBwCMFZ-RsdzqMpiX8kQAAAA&mediaurl=https%3a%2f%2fclipart.info%2fimages%2fccovers%2f1496184260Robot-Emoji-Png-transparent-background.png&exph=480&expw=458&q=robot+face+transparent+image&simid=608052715808949882&FORM=IRPRST&ck=9ACBB35DCC58D20B0D7D2D76923F98A6&selectedIndex=8&itb=1"--></button>
     </footer>
 <style>
         /* General Styles */
+*{
+    margin: 0;
+}
+
+html{
+    height: 100%;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
     color: #333;
+    min-height: 100%;
+    flex-direction: column;
 }
 
 header {
+    height: 75px;
     background-color: #4CAF50;
     color: white;
-    padding: 1rem 2rem;
+    padding: 1rem 0rem 0.5rem 1rem;
     text-align: center;
+    font-family: Arial Rounded MT;
 }
 
 header h1 {
     margin: 0;
+    font-family: Arial Rounded MT;
+}
+
+nav{
+    width: auto;
+    display: grid;
+    margin: 0 0 2px 0; 
+    gap: space-between;
+    padding: 0;
 }
 
 nav ul {
     list-style: none;
     padding: 0;
-    margin: 0;
+    margin: 0 0 2px 0;
     display: flex;
     justify-content: center;
+    font-size: 0.9rem;
 }
 
 nav ul li {
-    margin: 0 15px;
+    margin: 0 18px 2px 0;
+}
+
+nav ul li:hover{
+    border-bottom: 2px solid rgb(255, 255, 255);
 }
 
 nav ul li a {
@@ -186,6 +251,7 @@ nav ul li a {
 .search-form label {
     font-size: 1rem;
     margin: 10px 0 5px;
+    font-weight: bold;
 }
 
 .search-form input, .search-form select {
@@ -196,6 +262,10 @@ nav ul li a {
     border-radius: 5px;
     border: 1px solid #ccc;
     font-size: 1rem;
+}
+.search-form input:focus{
+    border: 0.5px solid #4CAF50;
+    outline: 1px solid #4c4c4c;
 }
 
 .search-form button {
@@ -214,13 +284,22 @@ nav ul li a {
 .products {
     padding: 2rem;
     text-align: center;
+    display: flex;
+    overflow-x: scroll;
+    max-width: 99%;
+    text-align: center;
+    scrollbar-width: thin;
+    scrollbar-width: 2vw;
+    scrollbar-color: #4CAF50 transparent;
 }
 
-.products h2 {
+h2 {
     font-size: 2rem;
+    text-align: center;
 }
 
 .product-grid {
+    width: 2000px;
     display: flex;
     justify-content: center;
     gap: 20px;
@@ -264,15 +343,16 @@ nav ul li a {
     background-color: #45a049;
 }
 
-footer {
+#foot {
     background-color: #333;
     color: white;
     padding: 1rem;
     text-align: center;
     margin-top: 20px;
+    font-size: 0.9rem;
 }
 
-footer ul {
+#foot ul {
     list-style: none;
     padding: 0;
     margin: 0;
@@ -281,16 +361,28 @@ footer ul {
     margin-top: 10px;
 }
 
-footer ul li {
+#foot ul li {
     margin: 0 10px;
 }
 
-footer ul li a {
+#foot ul li a {
     color: white;
     text-decoration: none;
-    font-size: 0.9rem;
+    font-size: 0.7rem;
 }
 
-    </style>
+footer{
+    background-color: red;
+}
+
+#chatbot{
+    height: 50px;
+    width: 50px;
+    background-color: Blue;
+    border: none;
+    border-radius: 100%;
+}
+
+</style>
 </body>
 </html>
